NetBSD Problem Report #42527

From www@NetBSD.org  Sun Dec 27 08:31:50 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 96E8563C37E
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 27 Dec 2009 08:31:50 +0000 (UTC)
Message-Id: <20091227083150.67F8C63B844@www.NetBSD.org>
Date: Sun, 27 Dec 2009 08:31:50 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Missing parenthesis in sys/dev/ic/smc90cx6.c .
X-Send-Pr-Version: www-1.0

>Number:         42527
>Category:       kern
>Synopsis:       Missing parenthesis in sys/dev/ic/smc90cx6.c .
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Dec 27 08:35:02 +0000 2009
>Closed-Date:    Sun Jan 10 07:20:05 +0000 2010
>Last-Modified:  Sun Jan 10 07:20:05 +0000 2010
>Originator:     Henning Petersen
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
Missing parenthesis found with cppcheck.
>How-To-Repeat:

>Fix:
diff -u -r1.60 smc90cx6.c
--- sys/dev/ic/smc90cx6.c	31 May 2009 14:11:17 -0000	1.60
+++ sys/dev/ic/smc90cx6.c	1 Dec 2009 11:58:42 -0000
@@ -288,7 +288,7 @@

 #ifdef BAH_DEBUG
 	printf("%s: reset: bits cleared, status=0x%02x\n",
-	    device_xname(&sc->sc_dev), GETREG(BAHSTAT);
+	    device_xname(&sc->sc_dev), GETREG(BAHSTAT));
 #endif

 	sc->sc_reconcount_excessive = ARC_EXCESSIVE_RECONS;
@@ -304,7 +304,7 @@

 #ifdef BAH_DEBUG
 	printf("%s: reset: started receiver, status=0x%02x\n",
-	    device_xname(&sc->sc_dev), GETREG(BAHSTAT);
+	    device_xname(&sc->sc_dev), GETREG(BAHSTAT));
 #endif

 	/* and init transmitter status */
@@ -845,7 +845,7 @@
 					printf("%s: strt rx for buf %ld, "
 					    "stat 0x%02x\n",
 					    device_xname(&sc->sc_dev), sc->sc_rx_act,
-					    GETREG(BAHSTAT);
+					    GETREG(BAHSTAT));
 #endif

>Release-Note:

>Audit-Trail:
From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42527 CVS commit: src/sys/dev/ic
Date: Sun, 10 Jan 2010 07:06:13 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Sun Jan 10 07:06:13 UTC 2010

 Modified Files:
 	src/sys/dev/ic: smc90cx6.c

 Log Message:
 Add a missing closing parenthesis in a few places.  From Henning Petersen
 in PR kern/42527.


 To generate a diff of this commit:
 cvs rdiff -u -r1.60 -r1.61 src/sys/dev/ic/smc90cx6.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: snj@NetBSD.org
State-Changed-When: Sun, 10 Jan 2010 07:20:05 +0000
State-Changed-Why:
Fixed.  Thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.