Add a missing closing parenthesis in a few places.  From Henning Petersen in PR kern/42527.